Correct sizing issue for Contact form on small screens

--- a/css/paint_styles.css
+++ b/css/paint_styles.css
@@ -1,5 +1,5 @@
 
-.card {                                /*Paint Party Container*/
+.card {                                /*Paint Party and Fundraiser Container*/
     padding: 20px 20px 20px;
     text-align: justify;
     background: rgb(236, 234, 234);
@@ -9,12 +9,12 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.paintH {                                   /* Paint Party header*/
+.paintH {                                   /* Paint Party anad Fundraiser header*/
     text-align: center;
-    color: rgb(158, 47, 7);
+    color: orangered;
 }
 
-.paint-image {                           /* Image inside About Me container*/
+.paint-image {                           /* Image inside Paint Party and Funraiser  container*/
     position: relative;      /* where the next element will be automatically positioned */
     display: inline-block;   /* causes element width to shrink to fit content */
     left: 50%;               /* moves left side of image to center of parent element */
@@ -27,15 +27,15 @@
     transition: all .5s;
 }
 
-.container {
-    max-width: 80%;
+/*.container {                 /* Contact Form 
+    
     width: 100%;
     margin: 0 auto;
     position: relative;
-}
-
+} 
+*/
 #contact {
-    padding: 25px;
+    padding: 0 25px 25px 25px;
     margin: 50px 0;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     background: rgb(236, 234, 234);
@@ -47,9 +47,10 @@
 
 #contact h1 {
     display: block;
-    font-weight: 300;
+    font-size: 300%;
+    font-weight: 450;
     margin-bottom: 10px;
-    color: red;
+    color: rgba(221, 22, 22, 0.89);
 }
 
 #contact h3 {
@@ -144,7 +145,12 @@ fieldset {
 
 @media screen and (max-width: 720px) {  
 
-    .card {
+    .card  {
+        margin: 20px;
+    }
+
+    .container {
+
         margin: 20px;
     }
 
@@ -166,6 +172,13 @@ fieldset {
         flex-direction: row;
         justify-content: space-around;
         margin: 50px auto;
+    }
+
+    .container{
+        max-width: 80%;
+        width: 100%;
+        margin: 0 auto;
+        position: relative;
     }
 
     .card {
